# submarine

./: .gitignore  .gitmodules  Gemfile  Guardfile  Procfile  README.md  Rakefile  Setup.hs  Thorfile  Vagrantfile  ansible_layout  cabal.sandbox.config  submarine.cabal  submarine.sublime-project  submarine.sublime-workspace  submarine.yml  test.yml
config/: deploy.rb
frontend/: Gruntfile.js  bower.json  package.json
frontend/app/: index.html
lib/amqp/: amqp.cabal
lib/amqp-simple/: amqp.cabal
lib/digitalocean/: digitalocean.cabal
lib/easy-api/: easy-api.cabal
lib/elastic-search/: elastic-search.cabal
lib/github/: github.cabal
lib/hedis-simple/: hedis-simple.cabal
lib/mandrill/: mandrill.cabal
lib/mandrill/src/: Mandrill.hs
lib/postgres-simple-uuid/: postgres-simple-uuid.cabal
lib/postgresql-libpq-0.8.2.3/: Setup.hs
lib/redis-simple/: whodis.cabal
lib/stripe/: stripe.cabal
lib/submarine-accounts-data/: submarine-accounts-data.cabal
lib/submarine-accounts-models/: submarine-accounts-models.cabal
lib/submarine-amqp-schema/: submarine-amqp-schema.cabal
lib/submarine-amqp-simple/: submarine-amqp-simple.cabal
lib/submarine-common/: submarine-common.cabal
lib/submarine-data-common/: submarine-data-common.cabal
lib/submarine-digitalocean/: submarine-digitalocean.cabal
lib/submarine-docker-api/: submarine-docker-api.cabal
lib/submarine-easy-api/: submarine-easy-api.cabal
lib/submarine-elastic-search/: submarine-elastic-search.cabal
lib/submarine-github/: submarine-github.cabal
lib/submarine-hedis-simple/: submarine-hedis-simple.cabal
lib/submarine-mandrill/: submarine-mandrill.cabal
lib/submarine-migrations/: submarine-migrations.cabal
lib/twilio/: twilio.cabal
orchestration/: ansible.yml  ansible_layout  base_server_setup.yml  development_layout  haproxy.yml  logstash_shipper.yml  production_layout  rabbit.yml  redis.yml  task_server.yml
src/: Main.hs
test/: URI.hs
(+212 files in other folders)
